--- a/CardanoSharp.Blockfrost.Sdk/CardanoSharp.Blockfrost.Sdk.csproj
+++ b/CardanoSharp.Blockfrost.Sdk/CardanoSharp.Blockfrost.Sdk.csproj
@@ -2,9 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <PackageId>Orion.CardanoSharp.Blockfrost.Sdk</PackageId>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>0.0.15</Version>
+        <Version>0.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
